[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ioejts"
description = "Instantly Implementable OEJTS"
version = "1.0.0"
authors = [
  { name="D. Y. Hwang", email="30566393+masope@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/masope/ioejts"
Issues = "https://github.com/masope/ioejts/issues"


[tool]
[tool.hatch]
